@@ -452,6 +452,8 @@ extern int __pthread_kill (pthread_t threadid, int signo);
 extern void __pthread_exit (void *value) __attribute__ ((__noreturn__));
 extern int __pthread_setcanceltype (int type, int *oldtype);
 extern void __pthread_testcancel (void);
+extern int __pthread_timedjoin_np (pthread_t threadid, void **thread_return,
+				   const struct timespec *abstime);
 
 #if IS_IN (libpthread)
 hidden_proto (__pthread_mutex_init)
@@ -467,6 +469,7 @@ hidden_proto (__pthread_setspecific)
 hidden_proto (__pthread_once)
 hidden_proto (__pthread_setcancelstate)
 hidden_proto (__pthread_testcancel)
+hidden_proto (__pthread_timedjoin_np)
 #endif
 
 extern int __pthread_cond_broadcast_2_0 (pthread_cond_2_0_t *cond);
